Bug 607225 - nanojit: add MODRM() and SIB() to Nativei386.cpp, plus other clean-ups.  r=rreitmai.